[gd_scene load_steps=15 format=3 uid="uid://dskdyxb8jxgsp"]

[ext_resource type="Script" uid="uid://cmrodddmskhsq" path="res://scripts/player.gd" id="1_0e48y"]
[ext_resource type="Texture2D" uid="uid://kbdjwlvoouje" path="res://textures_and_audios/diceboy1.png" id="2_epypp"]
[ext_resource type="Texture2D" uid="uid://brs7u31xw2jfd" path="res://textures_and_audios/diceboy2.png" id="3_0hol4"]
[ext_resource type="FontFile" uid="uid://dc5qmu3hkmfvw" path="res://textures_and_audios/MR ROBOT.ttf" id="4_mdl7e"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3li8b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_epypp")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0hol4")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdl7e"]
size = Vector2(112, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qu4a1"]
size = Vector2(10, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70d11"]
size = Vector2(29.5, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cw2d6"]
size = Vector2(133, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khinc"]
size = Vector2(167, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3li8b"]
size = Vector2(109, 109)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qu4a1"]
bg_color = Color(0.05490196, 0.4117647, 0.18039216, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.05490196, 0.4117647, 0.18039216, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdl7e"]
bg_color = Color(0.32941177, 0.75686276, 0.49019608, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.05490196, 0.4117647, 0.18039216, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_70d11"]
ProgressBar/colors/font_color = Color(0.32941177, 0.75686276, 0.49019608, 1)
ProgressBar/colors/font_outline_color = Color(0.05490196, 0.4117647, 0.18039216, 1)
ProgressBar/constants/outline_size = 5
ProgressBar/fonts/font = ExtResource("4_mdl7e")
ProgressBar/styles/background = SubResource("StyleBoxFlat_qu4a1")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_mdl7e")

[node name="PlayerBody" type="CharacterBody2D"]
process_mode = 1
script = ExtResource("1_0e48y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_3li8b")
animation = &"closed"

[node name="WallCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mdl7e")

[node name="OuterCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuterCollision"]
position = Vector2(-92, 0)
shape = SubResource("RectangleShape2D_qu4a1")
debug_color = Color(0.9019608, 0, 0.14509805, 0.41960785)

[node name="InnerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InnerCollision"]
position = Vector2(25, 10)
shape = SubResource("RectangleShape2D_70d11")
debug_color = Color(0, 0.8352941, 0, 0.41960785)

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionWallUp" type="CollisionShape2D" parent="Walls"]
position = Vector2(1088.5, -10)
shape = SubResource("RectangleShape2D_cw2d6")

[node name="CollisionWallDown" type="CollisionShape2D" parent="Walls"]
position = Vector2(1074.5, 658)
shape = SubResource("RectangleShape2D_khinc")

[node name="BadCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BadCollision"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_3li8b")
debug_color = Color(0.92333925, 5.063355e-05, 0.6860589, 0.41960785)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 372.0
offset_top = 624.0
offset_right = 765.0
offset_bottom = 648.0
theme = SubResource("Theme_70d11")
